<?xml version="1.0"?>
<package format="2">
  <name>kuka_arm_description</name>
  <version>1.0.0</version>
  <description>The kuka_arm_description package</description>
  <maintainer email="ros20.doc@gmail.com">Anubhav Singh</maintainer>
  <author email="ros20.doc@gmail.com">Anubhav Singh</author>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
